--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    // swagger-docs 라이브러리
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
+    // aws 라이브러리
+    implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
 }
 
 tasks.named('test') {
