--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,12 @@ spring:
     username: root
     password: baejunbum10
     driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    include: key # application-key.yml 파일로 중요 키 분리
 
   jpa:
     hibernate:
-      ddl-auto: create   # ?? ??? create / create-drop / update ? ??
+      ddl-auto: create   # create / create-drop / update
     properties:
       hibernate:
         format_sql: true
@@ -15,4 +17,23 @@ spring:
 
 logging:
   level:
+    root: debug
     org.hibernate.SQL: debug
+    sun.rmi: OFF
+    sun.rmi.transport: OFF
+    sun.rmi.transport.tcp: OFF
+    sun.rmi.loader: OFF
+    javax.management.remote: OFF
+    javax.management.remote.rmi: OFF
+
+
+# swagger-ui custom path
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+
+aws:
+  s3:
+    region: ap-southeast-2
+    bucket: community-demo-bucket
