--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,15 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   profiles:
     include: key # application-key.yml 파일로 중요 키 분리
+  servlet:
+    multipart: # 파일 업로드 시 사이즈
+      enabled: true
+      max-file-size: 5MB # 5MB
+      max-request-size: 5MB
 
   jpa:
     hibernate:
-      ddl-auto: create   # create / create-drop / update
+      ddl-auto: validate   # create / create-drop / update
     properties:
       hibernate:
         format_sql: true
