--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -42,8 +43,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // swagger-docs 라이브러리
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
+    //Thymeleaf 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     // aws 라이브러리
-    implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
+    implementation'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation 'org.mockito:mockito-core:5.20.0'
+    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+    testImplementation 'org.assertj:assertj-core:3.27.3'
+
 }
 
 tasks.named('test') {
