--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,9 @@ springdoc:
     path: /swagger-ui.html
     enabled: true
 
+frontend:
+  host: http://localhost:3000
+
 aws:
   s3:
     region: ap-southeast-2
